<resources>
    <string name="title_activity_main">Reddit Browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Browser for Reddit</string>
    <string name="menu_frontpage">Front Page</string>
    <string name="menu_popular">popular</string>
    <string name="menu_all">all</string>
    <string name="menu_multis">My Multireddits</string>
    <string name="menu_subscribed">My Subscribed Subreddits</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_fullscreen_post">FullscreenPostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="feed_header">Feed Settings</string>
    <string name="posts_header">Post Settings</string>
    <string name="land_cols_title">Number of columns (landscape)</string>
    <string name="port_cols_title">Number of columns (portrait)</string>
    <string name="card_spacing_title">Spacing between cards</string>
    <string name="show_nsfw_title">Show NSFW post content</string>
    <string name="post_loading">Loading…</string>
    <string name="auto_play_title">Play videos automatically</string>
    <string name="battery_saver">Follow battery saver setting</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system setting</string>
    <string name="app_header">Application Settings</string>
    <string name="theme_mode_title">Theme</string>
    <string name="sort_default">Default</string>
    <string name="hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="controversial">Controversial</string>
    <string name="top">Top</string>
    <string name="rising">Rising</string>
    <string name="hour">Past hour</string>
    <string name="day">Past 24 hours</string>
    <string name="week">Past week</string>
    <string name="month">Past month</string>
    <string name="year">Past year</string>
    <string name="period_all">All time</string>
    <string name="period_default">Default</string>
    <string name="menu_subreddit_box">subreddit</string>
</resources>
