<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_frontpage"
                android:title="@string/menu_frontpage"/>
        <item
                android:id="@+id/nav_popular"
                android:title="@string/menu_popular"/>
        <item
                android:id="@+id/nav_all"
                android:title="@string/menu_all"/>

        <item android:title="@string/menu_multis">
            <menu android:id="@+id/nav_multis"/>
        </item>

        <item android:title="@string/menu_subscribed">
            <menu android:id="@+id/nav_subscribed"/>
        </item>
    </group>

</menu>
