<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/app_header">

        <ListPreference
                app:key="themeMode"
                app:title="@string/theme_mode_title"
                app:entries="@array/themeNames"
                app:entryValues="@array/themeValues"/>

        <EditTextPreference
                app:key="accountName"
                app:title="@string/account_name_title"
                android:inputType="text" />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/feed_header">

        <EditTextPreference
                app:key="landCols"
                app:title="@string/land_cols_title"
                android:inputType="number"/>

        <EditTextPreference
                app:key="portCols"
                app:title="@string/port_cols_title"
                android:inputType="number"/>

        <SwitchPreferenceCompat
                app:key="useWebView"
                app:title="@string/web_view_title"/>

        <SwitchPreferenceCompat
                app:key="useOkHttpExoPlayer"
                app:title="@string/useOkHttpExoPlayer" />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/posts_header">

        <SwitchPreferenceCompat
                app:key="showNsfw"
                app:title="@string/show_nsfw_title"/>

        <SwitchPreferenceCompat
                app:key="autoPlay"
                app:title="@string/auto_play_title"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
