<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <include layout="@layout/nav_header_main"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"/>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/menu_frontpage"
                              android:textAppearance="@style/NavItem"
                              android:id="@+id/nav_list_frontpage"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/menu_popular"
                              android:textAppearance="@style/NavItem"
                              android:id="@+id/nav_list_popular"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/menu_all"
                              android:textAppearance="@style/NavItem"
                              android:id="@+id/nav_list_all"/>
                </LinearLayout>

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:hint="@string/menu_subreddit_box" android:importantForAutofill="no"
                          android:imeOptions="actionGo"
                          android:inputType="textNoSuggestions" android:id="@+id/nav_entry_subreddit"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:labelFor="@+id/nav_list_multis"
                          android:text="@string/menu_multis"
                          android:textAppearance="@style/NavHeading"/>
                <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/nav_list_multis"
                                                           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:labelFor="@+id/nav_list_subs"
                          android:text="@string/menu_subscribed"
                          android:textAppearance="@style/NavHeading"/>
                <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/nav_list_subs"
                                                           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
